k8s/helm-demo-ms2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: helm-demo-ms2-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: helm-demo-ms2
    component: arc-component
  ports:
    - port: 80
      targetPort: 8888
